--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <div class="col-12 col-md-4 col-lg-3">
         
         <!-- Brand -->
-        <img src="@@webRoot/assets/img/brand.svg" alt="..." class="footer-brand img-fluid mb-2">
+        <!-- <img src="@@webRoot/assets/img/brand.svg" alt="..." class="footer-brand img-fluid mb-2"> -->
 
         <!-- Text -->
         <p class="text-gray-700 mb-2">
