add og image linkedin

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,6 +1,7 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="image" property="og:image" content="../assets/img/thecompanyx.png">
 
 <!-- Libs CSS -->
 <link rel="stylesheet" href="@@webRoot/assets/fonts/Feather/feather.css">
