--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,7 +1,7 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="image" property="og:image" content="../assets/img/thecompanyx.png">
+<meta name="image" property="og:image" content="https://thecompanyxbootstrap-20191231134406-hostingbucket-production.s3.amazonaws.com/assets/img/thecompanyx.png">
 
 <!-- Libs CSS -->
 <link rel="stylesheet" href="@@webRoot/assets/fonts/Feather/feather.css">
